package edu.hitsz.aircraft;

import edu.hitsz.application.ImageManager;
import edu.hitsz.application.Main;
import edu.hitsz.bullet.BaseBullet;
import edu.hitsz.bullet.EnemyBullet;

import edu.hitsz.factory.BlpropFactory;
import edu.hitsz.factory.BopropFactory;
import edu.hitsz.factory.BupropFactory;
import edu.hitsz.factory.PropFactory;
import edu.hitsz.prop.GameProp;


import java.util.LinkedList;
import java.util.List;
import java.util.Random;


public class EliteEnemy extends FatherEnemy{
    GameProp gameProp;
    /**攻击方式 */

    /**
     * 子弹一次发射数量
     */
    private int shootNum = 1;

    /**
     * 子弹伤害
     */
    private int power = 30;

    /**
     * 子弹射击方向 (向上发射：1，向下发射：-1)
     */
    private int direction = 1;

    public EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp) {
        super(locationX, locationY, speedX, speedY, hp);
    }

    @Override
    public void forward() {
        super.forward();
        // 判定 y 轴向下飞行出界
        if (locationY >= Main.WINDOW_HEIGHT ) {
            vanish();
        }
    }


    @Override
    /**
     * 通过射击产生子弹
     * @return 射击出的子弹List
     */
    public List<BaseBullet> shoot() {
        List<BaseBullet> res = new LinkedList<>();
        int x = this.getLocationX();
        int y = this.getLocationY() + direction*2;
        int speedX = 0;
        int speedY =this.getSpeedY() + direction*5;
        BaseBullet abstractBullet;
        for(int i=0; i<shootNum; i++){
            // 子弹发射位置相对飞机位置向前偏移
            // 多个子弹横向分散
            abstractBullet = new EnemyBullet(x + (i*2 - shootNum + 1)*10, y, speedX, speedY, power);

           res.add(abstractBullet);
        }
        return res;
    }


 /**
  *精英敌机产生道具
 */
    @Override
    public GameProp getProp() {
        if(getpropFactory()!=null) {
            return getpropFactory().createProp(this);
        }
        else {
            return  null;
        }
    }
}
